results/SVCOMP/0-shot/log-arraylength1-2024_03_18_22_53_54.txt
class arraylength1 {
  //@ requires size >= 0;
  //@ ensures \result == -1 ==> size < 0;
  //@ ensures \result == 0 ==> size >= 0 && \fresh(int_array) && int_array.length != size;
  //@ ensures \result == 1 ==> size >= 0 && \fresh(int_array) && int_array.length == size;
  public static int func(int size) {
    if (size < 0) return -1;
    int int_array[] = new int[size];

    if(int_array.length != size)
      return 0;
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:4: error: cannot find symbol
  //@ ensures \result == 0 ==> size >= 0 && \fresh(int_array) && int_array.length != size;
                                                   ^
  symbol:   variable int_array
  location: class arraylength1
/home/max/Documents/JMLGPT/tmp/arraylength1.java:4: error: cannot find symbol
  //@ ensures \result == 0 ==> size >= 0 && \fresh(int_array) && int_array.length != size;
                                                                 ^
  symbol:   variable int_array
  location: class arraylength1
/home/max/Documents/JMLGPT/tmp/arraylength1.java:5: error: cannot find symbol
  //@ ensures \result == 1 ==> size >= 0 && \fresh(int_array) && int_array.length == size;
                                                   ^
  symbol:   variable int_array
  location: class arraylength1
/home/max/Documents/JMLGPT/tmp/arraylength1.java:5: error: cannot find symbol
  //@ ensures \result == 1 ==> size >= 0 && \fresh(int_array) && int_array.length == size;
                                                                 ^
  symbol:   variable int_array
  location: class arraylength1
4 errors

